Fix alignment for left toc items. Fix alignment for breadcrumbs/logo to be fully left

--- a/docs/_static/theme_override.css
+++ b/docs/_static/theme_override.css
@@ -51,7 +51,7 @@ nav.navbar {
     padding: 10px;
 }
 
-a.nav-link {
+.bd-breadcrumbs a.nav-link, .bd-navbar a.nav-link {
     font-size: 20px;
 }
 
@@ -59,8 +59,15 @@ a.nav-link {
     color: #000;
 }
 
+/*
 div#navbar-start {
 	margin: 0 auto;
+}
+*/
+
+.bd-toc-item .caption-text {
+    padding: .25rem 1.5rem;
+    color: #a4a6a7;
 }
 
 img.logo {
@@ -136,7 +143,7 @@ img.logo {
     background-color: #36434c;
     min-width: 100%;
     margin: 0;
-    text-align: center;
+    /*text-align: center;*/
     padding:0.75em;
 }
 
@@ -155,6 +162,7 @@ img.logo {
  *zoom:1;
  margin: 0;
  font-size: 18px;
+ padding-left: 0px;
 }
 .bd-breadcrumbs:after,
 .bd-breadcrumbs:before {
